--- a/src/app/tdf-form/tdf-form.component.html
+++ b/src/app/tdf-form/tdf-form.component.html
@@ -7,16 +7,30 @@
             <h2>Personal info</h2>
             <div class="form-group">
                 <label for="">Name</label>
-                <input #name="ngModel" type="text" required [class.is-invalid]="name.invalid && name.touched" class="form-control" name="username" [(ngModel)]="userModel.name">
-                <div *ngIf="">
-
+                <input 
+                    #name="ngModel" 
+                    type="text" 
+                    required 
+                    [class.is-invalid]="name.invalid && name.touched" 
+                    class="form-control" 
+                    name="username" 
+                    [(ngModel)]="userModel.name"
+                    minlength="3"
+                    >
+                <div *ngIf="name.touched">
+                    <small *ngIf="name.errors?.['required']" class="text-danger">Name is required</small>
+                    <small *ngIf="name.errors?.['minlength']" class="text-danger">Name is too short</small>
                </div>
                 <!-- <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small> -->
             </div>
 
             <div class="form-group">
                 <label for="">Email</label>
-                <input type="email" class="form-control" name="email" [(ngModel)]="userModel.email">
+                <input #email="ngModel" type="email" class="form-control" required [class.is-invalid]="email.invalid && email.touched" name="email" pattern=".+@.+" [(ngModel)]="userModel.email">
+                <div *ngIf="email.invalid && email.touched">
+                    <small class="text-danger" *ngIf="email.errors?.['required']">Email is required</small>
+                    <small class="text-danger" *ngIf="email.errors?.['pattern']">Email is not valid</small>
+                </div>
             </div>
 
             <div class="form-group">
@@ -29,13 +43,25 @@
                 <!-- <small class="text-danger" [class.d-none]="phone.valid || phone.untouched">Pnone numberis required must be 10 digit</small> -->
             </div>
 
+            <!-- select form valication -->
             <div class="form-group mb-4 mt-4">
-                <select class="custom-select" name="topic" id="" [(ngModel)]="userModel.topic">
-                    <option value="">I am interested in</option>
+                <select 
+                    (blur)="validateTopic(Seltopic.value)"
+                    (change)="validateTopic(Seltopic.value)"
+                    required 
+                    #Seltopic = 'ngModel' 
+                    class="custom-select" 
+                    name="topic" 
+                    id="" 
+                    [(ngModel)]="userModel.topic"
+                >
+                    <option value="default">I am interested in</option>
                     <option *ngFor="let topic of topics">{{ topic }}</option>
                 </select>
+                <small class="text-danger" *ngIf="topisHasError && Seltopic.touched">Please choose a topic</small>
             </div>
 
+            
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="userModel.timePreference">
                 <label class="form-check-label" for="flexRadioDefault1">
