--- a/src/app/tdf-form/tdf-form.component.html
+++ b/src/app/tdf-form/tdf-form.component.html
@@ -1,32 +1,28 @@
 <div class="container-fluid">
     <h1>Bootcamp Enroolment Form</h1>
-
-    <form class="form-group" #userForm="ngForm">
+    <div class="alert alert-danger" *ngIf="errorMassage">{{errorMassage}}</div>
+    
+    <form *ngIf="!submitted" class="form-group" #userForm="ngForm" (ngSubmit)="onSubmit();">
+        {{ userForm.form.valid }}
 
         <div class="personal-info border p-5 mb-1" style="background-color: rgb(244, 240, 243);">
             <h2>Personal info</h2>
             <div class="form-group">
                 <label for="">Name</label>
-                <input 
-                    #name="ngModel" 
-                    type="text" 
-                    required 
-                    [class.is-invalid]="name.invalid && name.touched" 
-                    class="form-control" 
-                    name="username" 
-                    [(ngModel)]="userModel.name"
-                    minlength="3"
-                    >
+                <input #name="ngModel" type="text" required [class.is-invalid]="name.invalid && name.touched"
+                    class="form-control" name="username" [(ngModel)]="userModel.name" minlength="3">
                 <div *ngIf="name.touched">
                     <small *ngIf="name.errors?.['required']" class="text-danger">Name is required</small>
                     <small *ngIf="name.errors?.['minlength']" class="text-danger">Name is too short</small>
-               </div>
+                </div>
                 <!-- <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small> -->
             </div>
 
             <div class="form-group">
                 <label for="">Email</label>
-                <input #email="ngModel" type="email" class="form-control" required [class.is-invalid]="email.invalid && email.touched" name="email" pattern=".+@.+" [(ngModel)]="userModel.email">
+                <input #email="ngModel" type="email" class="form-control" required
+                    [class.is-invalid]="email.invalid && email.touched" name="email" pattern=".+@.+"
+                    [(ngModel)]="userModel.email">
                 <div *ngIf="email.invalid && email.touched">
                     <small class="text-danger" *ngIf="email.errors?.['required']">Email is required</small>
                     <small class="text-danger" *ngIf="email.errors?.['pattern']">Email is not valid</small>
@@ -35,7 +31,8 @@
 
             <div class="form-group">
                 <label for="">Phone</label>
-                <input type="tel" #phone="ngModel" [class.is-invalid]="phone.invalid && phone.touched" pattern="^\d{11}$" required class="form-control" name="phone" [(ngModel)]="userModel.phone">
+                <input type="tel" #phone="ngModel" [class.is-invalid]="phone.invalid && phone.touched"
+                    pattern="^\d{11}$" required class="form-control" name="phone" [(ngModel)]="userModel.phone">
                 <div *ngIf="phone.invalid && phone.touched">
                     <small class="text-danger" *ngIf="phone.errors?.['required']">Phone number is required</small>
                     <small class="text-danger" *ngIf="phone.errors?.['pattern']">Phone number must be 11 digit</small>
@@ -45,35 +42,31 @@
 
             <!-- select form valication -->
             <div class="form-group mb-4 mt-4">
-                <select 
-                    (blur)="validateTopic(Seltopic.value)"
-                    (change)="validateTopic(Seltopic.value)"
-                    required 
-                    #Seltopic = 'ngModel' 
-                    class="custom-select" 
-                    name="topic" 
-                    id="" 
-                    [(ngModel)]="userModel.topic"
-                >
-                    <option value="default">I am interested in</option>
+                <select (blur)="validateTopic(Seltopic.value)" (change)="validateTopic(Seltopic.value)" required
+                    #Seltopic='ngModel' class="custom-select" name="topic" id="" [(ngModel)]="userModel.topic">
+                    <option value="">I am interested in</option>
                     <option *ngFor="let topic of topics">{{ topic }}</option>
                 </select>
-                <small class="text-danger" *ngIf="topisHasError && Seltopic.touched">Please choose a topic</small>
+                <small class="text-danger" *ngIf="topicHasError && Seltopic.touched">Please choose a topic</small>
             </div>
 
-            
+
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="userModel.timePreference">
+                <input required class="form-check-input" type="radio" name="timePreference" id="flexRadioDefault1"
+                    [(ngModel)]="userModel.timePreference" value="Morning">
                 <label class="form-check-label" for="flexRadioDefault1">
                     Morning
                 </label>
             </div>
+
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" [(ngModel)]="userModel.timePreference">
+                <input required class="form-check-input" type="radio" name="timePreference" id="flexRadioDefault2"
+                    [(ngModel)]="userModel.timePreference" value="Evening">
                 <label class="form-check-label" for="flexRadioDefault2">
                     Evening
                 </label>
             </div>
+
 
 
 
@@ -86,7 +79,8 @@
             </div>
 
         </div>
-        <button class="btn btn-primary mt-4" type="submit">
+
+        <button [disabled]="userForm.invalid || topicHasError" class="btn btn-primary mt-4" type="submit">
             Submit From
         </button>
 
